# PESU-IO

./: README.md
Assignment-1/PDF/: .env  README.md  main.py
Assignment-1/WEBSITE/: README.md  main.py
Assignment-1/WEBSITE/data/: website_content.md
Assignment-2/medical_agent/: README.md  pyproject.toml  report.md
Assignment-2/medical_agent/src/medical_agent/: crew.py  main.py
Assignment-2/medical_agent/src/medical_agent/config/: agents.yaml  tasks.yaml
PROJECT/: main.py
PROJECT/data/: disaese.md  medical.md  medical2.md
PROJECT/index/: default__vector_store.json  docstore.json  index_store.json
PROJECT/utils/: schema.py
