[project]
name = "medical_agent"
version = "0.1.0"
description = "medical-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
medical_agent = "medical_agent.main:run"
run_crew = "medical_agent.main:run"
train = "medical_agent.main:train"
replay = "medical_agent.main:replay"
test = "medical_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
